Add deploy.sh and remove unnecessary files

--- a/subgraph-template.yaml
+++ b/subgraph-template.yaml
@@ -2,14 +2,14 @@ specVersion: 0.0.2
 description: EIP-721
 repository: https://github.com/wighawag/eip721-subgraph
 schema:
-  file: schema.graphql
+  file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: EIP721
-    network: mainnet
+    network: NETWORK_NAME
     source:
       abi: EIP721
-      startBlock: 5806610
+      startBlock: START_BLOCK
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -22,8 +22,8 @@ dataSources:
         - All
       abis:
         - name: EIP721
-          file: EIP721/abis/All.json
+          file: ./abis/All.json
       eventHandlers:
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
-      file: EIP721/EIP721.wasm
+      file: ./src/mapping.ts
