Replace gulabs by gu-corp

--- a/.github/workflows/deploy-sandbox.yml
+++ b/.github/workflows/deploy-sandbox.yml
@@ -26,9 +26,9 @@ jobs:
           cache: "npm"
       - run: sh deploy.sh
         env:
-          NETWORK_NAME: "gu_sandbox"
+          NETWORK_NAME: "gusandbox"
           START_BLOCK: "0"
-          SUBGRAPH_NAME: "gulabs/eip721"
+          SUBGRAPH_NAME: "gu-corp/eip721"
           GRAPH_NODE_URL: "https://admin.graphnode.sandbox1.japanopenchain.org"
           IPFS_URL: "https://ipfs.graphnode.sandbox1.japanopenchain.org"
           VERSION: "${{ github.ref_name }}"
