--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,24 +7,12 @@ on:
         description: 'Positionals'
         required: true
         type: choice
-        default: 'prerelease'
+        default: 'build'
         options:
           - major
           - minor
           - patch
-          - premajor
-          - preminor
-          - prepatch
-          - prerelease
-      preid:
-        description: 'Prerelease identifier'
-        required: true
-        type: choice
-        default: 'alpha'
-        options:
-          - alpha
-          - beta
-          - rc
+          - build
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.actor }}
@@ -32,24 +20,30 @@ concurrency:
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  publish:
+  publish-version:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: npm install
+          cache: 'yarn'
+      - run: yarn
       - name: Version
+        id: create-version
         run: |
           git config user.name ${{ github.actor }}
           git config user.email ${{ github.actor }}@users.noreply.github.com
-          TAG=$(npm version ${{ inputs.bump }} --preid ${{ inputs.preid }})
+          if [ ${{ inputs.bump }} == major ]; then BUMP='premajor'; fi
+          if [ ${{ inputs.bump }} == minor ]; then BUMP='preminor'; fi
+          if [ ${{ inputs.bump }} == patch ]; then BUMP='prepatch'; fi
+          if [ ${{ inputs.bump }} == build ]; then BUMP='prerelease'; fi
+          TAG=$(npm version $BUMP --preid build)
           git push origin
           git push origin $TAG
