--- a/subgraph-template.yaml
+++ b/subgraph-template.yaml
@@ -1,29 +1,73 @@
-specVersion: 0.0.5
+specVersion: 0.0.4
 description: EIP-721
 repository: https://github.com/gu-corp/eip721-subgraph
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: EIP721
+    name: erc721
     network: NETWORK_NAME
     source:
-      abi: EIP721
+      abi: IERC721
       startBlock: START_BLOCK
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.7
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
-        - Token
-        - TokenContract
-        - Owner
-        - OwnerPerTokenContract
-        - All
+        - ERC721Contract
       abis:
-        - name: EIP721
-          file: ./abis/All.json
+        - name: IERC721
+          file: ./node_modules/@openzeppelin/contracts/build/contracts/IERC721Metadata.json
       eventHandlers:
+        - event: Approval(indexed address,indexed address,indexed uint256)
+          handler: handleApproval
+        - event: ApprovalForAll(indexed address,indexed address,bool)
+          handler: handleApprovalForAll
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: erc721-concecutive
+    network: NETWORK_NAME
+    source:
+      abi: IERC2309
+      startBlock: START_BLOCK
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - ERC721Contract
+      abis:
+        - name: IERC2309
+          file: ./node_modules/@openzeppelin/contracts/build/contracts/IERC2309.json
+        - name: IERC721
+          file: ./node_modules/@openzeppelin/contracts/build/contracts/IERC721Metadata.json
+      eventHandlers:
+        - event: ConsecutiveTransfer(indexed uint256,uint256,indexed address,indexed address)
+          handler: handleConsecutiveTransfer
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: erc721-metadataupdate
+    network: NETWORK_NAME
+    source:
+      abi: IERC4906
+      startBlock: START_BLOCK
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      entities:
+        - ERC721Contract
+      abis:
+        - name: IERC4906
+          file: ./node_modules/@openzeppelin/contracts/build/contracts/IERC4906.json
+        - name: IERC721
+          file: ./node_modules/@openzeppelin/contracts/build/contracts/IERC721Metadata.json
+      eventHandlers:
+        - event: MetadataUpdate(uint256)
+          handler: handleMetadataUpdate
+        - event: BatchMetadataUpdate(uint256,uint256)
+          handler: handleBatchMetadataUpdate
       file: ./src/mapping.ts
